Fix help text in dark mode

--- a/word-squeeze/style.css
+++ b/word-squeeze/style.css
@@ -10,7 +10,6 @@ body {
 }
 
 ul {
-    list-style-type: none;
     display: flex;
     gap: 1em;
     & li {
@@ -18,6 +17,7 @@ ul {
         background-color: #444;
         color: white;
         border-radius: 5px;
+        list-style: none;
     }
 }
 
